--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.inputsystem": "1.17.0",
     "com.unity.multiplayer.center": "1.0.1",
     "com.unity.sdk.linux-x86_64": "1.0.2",
     "com.unity.toolchain.linux-x86_64-linux": "1.0.2",
