--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.sdk.linux-x86_64": "1.0.2",
+    "com.unity.toolchain.linux-x86_64-linux": "1.0.2",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
